--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!--header-->
     <header>
         <a href="index.html" class="headerlogo">
-            <img src="logo_header.svg" alt="saitis logo" class="logo"></a>
+            <img src="img/logo_header.svg" alt="saitis logo" class="logo"></a>
 
         <nav>
             <ul class="nav_ul">
